<resources>
    <string name="app_name">怦然心动库房版</string>
    <string name="title_home">首页</string>
    <string name="title_set">设置</string>
    <string name="activity_login">登陆</string>
    <string name="activity_receipt">库房收货</string>
    <string name="activity_receipt_statistics">库房收货统计</string>
    <string name="activity_shipment">库房发货</string>
    <string name="activity_shipment_statistics">库房发货统计</string>
    <string name="activity_version_check">版本检测</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="welcome">"欢迎:"</string>
    <string name="invalid_username">用户名或密码有误</string>
    <string name="invalid_password">密码须大于5位</string>
    <string name="login">"登陆"</string>
    <string name="login_ing">"登陆中..."</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="get_warehouse_failed">获取库房信息失败</string>
    <string name="get_staffs_failed">获取库房人员信息失败</string>
    <string name="login_onduty_staff">选择在岗人员</string>
    <string name="logout">用户登出</string>
    <string name="user_logout">确定要注销当前用户？</string>
    <string name="logout_failed">登出失败</string>
    <string name="logout_success">用户登出成功</string>
    <string name="getting_staff">获取工作人员信息中...</string>
    <string name="getting_warehouse">获取库房信息中...</string>
    <string name="nav_warehouse_manager">库房管理</string>
    <string name="nav_warehousing">库房收货</string>
    <string name="nav_exwarehouse">库房发货</string>
    <string name="nav_warehousing_statistics">库房收货统计</string>
    <string name="nav_exwarehouse_statistics">库房发货统计</string>
    <string name="nav_dev_manager">设备管理</string>
    <string name="nav_set_scan">扫描设置</string>
    <string name="supplier_id">供应商编号</string>
    <string name="goods_code">&#12288;货物条码&#12288;</string>
    <string name="area">&#12288;&#12288;片区&#12288;</string>
    <string name="warehouse">&#12288;&#12288;库房&#12288;</string>
    <string name="order_class">&#12288;下单属性</string>
    <string name="goods_class">&#12288;&#12288;类别&#12288;</string>
    <string name="old_goods_code">&#12288;&#8194;旧货号&#8194;</string>
    <string name="warehouse_remark">&#12288;&#12288;备注&#12288;</string>
    <string name="branch_code">&#12288;分店编号&#12288;</string>
    <string name="order_date">&#12288;下单日期&#12288;</string>
    <string name="invalid_date">交货截至日期</string>
    <string name="new_goods_code">&#12288;&#8194;&#8194;新货号&#8194;&#8194;</string>
    <string name="num">&#8194;&#12288;&#8194;数量&#8194;&#12288;&#8194;</string>
    <string name="size">&#8194;&#12288;&#8194;尺码&#8194;&#12288;&#8194;</string>
    <string name="area_prxd">连锁事业部</string>
    <string name="supplier_id1">供应商</string>
    <string name="goods_code1">货物条码</string>
    <string name="area1">片区</string>
    <string name="warehouse1">库房</string>
    <string name="order_class1">属性</string>
    <string name="goods_class1">类别</string>
    <string name="old_goods_code1">旧货号</string>
    <string name="warehouse_remark1">备注</string>
    <string name="branch_code1">分店号</string>
    <string name="order_date1">下单日</string>
    <string name="invalid_date1">截至日</string>
    <string name="new_goods_code1">新货号</string>
    <string name="num1">数量</string>
    <string name="size1">尺码</string>
    <string name="area_prxd1">连锁事业部</string>
    <string name="request_power">权限请求!</string>
    <string name="request_power_WES">App需要获取所有的权限,请允许！</string>
    <string name="app_crash">App异常崩溃</string>
    <string name="app_crash_msg">很抱歉，App异常崩溃了!</string>
    <string name="app_crash_reset">重启App</string>
    <string name="app_crash_close">退出App</string>
    <string name="app_create_file_failed">创建数据文件失败</string>
    <string name="app_create_file_failed_msg">创建App数据文件失败,App退出运行!</string>
    <string name="contentDescription">123</string>
    <string name="cancel">取消</string>
    <string name="yes">确定</string>
    <string name="link_server_failed">连接服务器失败</string>
    <string name="data_query">数据查询中...</string>
    <string name="on_duty_staff_choice">在岗职员选择</string>
    <string name="warehouse_choice">库房选择</string>
    <string name="branch_choice">请选择分店</string>
    <string name="submit">提交</string>
    <string name="total">合计</string>
    <string name="warehouse_received">已入库</string>
    <string name="warehouse_unreceived">未入库</string>
    <string name="warehouse_send">已出库</string>
    <string name="warehouse_unsend">未出库</string>
    <string name="warehouse_name">库房名</string>
    <string name="warehouse_staff_name">库员名</string>
    <string name="input_password">请输入密码</string>
    <string name="code_format_error">条码长度或格式错误,条码只能由字母和数字组成</string>
    <string name="colon_zh">：</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="warehouse_business_time">入库时间</string>
    <string name="exWarehouse_business_time">出库时间</string>
    <string name="remark">备注:</string>
    <string name="money">￥</string>
    <string name="delete">删除</string>
    <string name="submit_success">提交成功</string>
    <string name="scaned">已扫描</string>
    <string name="unScan">未扫描</string>
    <string name="no_choice_branch">请先选择分店</string>
    <string name="branch_not_delivery_required">分店无需发货</string>
    <string name="choice_date">请选择日期</string>
    <string name="receipt_time">入库时间</string>
    <string name="reset">清空</string>
    <string name="query">查询</string>
    <string name="code_input">条码输入</string>
    <string name="code_input_please">请输入条码</string>
    <string name="input_null">输入为空</string>
    <string name="orderId">订单号</string>
    <string name="branchName">分店编号</string>
    <string name="amount">订单数量</string>
    <string name="sendAmount">发货数量</string>
    <string name="repeatOrder">订单已经扫描</string>
    <string name="totalOrder">合计订单</string>
    <string name="noData">无数据</string>
    <string name="errorData">数据格式错误</string>
    <string name="branch_input_please">请输入分店编号</string>
    <string name="branch_id">分店编号</string>
    <string name="loadPhotoFailed">加载图片失败</string>
    <string name="inState">订单状态</string>
    <string name="orderType">订单类型</string>
    <string name="dearClassName">订单挡位</string>
    <string name="orderTime">下单时间</string>
    <string name="roomReceiveTime">入库时间</string>
    <string name="goodsClass">货物类型</string>
    <string name="not_in_room">未入库</string>
    <string name="notThisBranchOrder">非此分店订单</string>
    <string name="goods_class_type">货物类别</string>
    <string name="goodsType">货号类型</string>
    <string name="nav_goodsback">返货</string>
    <string name="activity_goods_back">返货</string>
    <string name="invalidData">截至日期</string>
    <string name="storeRoomName">库房</string>
    <string name="goodsClassName">类别</string>
    <string name="branch_id_error">无此分店,请检查输入字母大小写或其他</string>
    <string name="code">条码</string>
    <string name="otherBranchOrder">其他分店订单</string>
    <string name="search">搜索</string>
    <string name="activity_printer">打印设置</string>
    <string name="printer_label">打印机设置</string>
    <string name="printer_title">打印机</string>
    <string name="printer_linking">打印机连接中...</string>
    <string name="printer_linked">打印机已连接</string>
    <string name="printer_scanning">打印机扫描中...</string>
    <string name="printer_scan_finish">扫描完成</string>
    <string name="printer_test">打印测试</string>
    <string name="printer_no_link">未连接打印机，请先连接</string>
    <string name="printer_bill">票据打印机</string>
    <string name="printer_code">条码打印机</string>
    <string name="printer_cpcl">单面打印机</string>
    <string name="printer_wifi_title">WIFI打印机</string>
    <string name="printer_wifi_describe">当前可搜索附件的WiFi打印机</string>
    <string name="printer_bluetooth_title">蓝牙打印机</string>
    <string name="printer_bluetooth_describe_on">当前可搜索附件的蓝牙打印机</string>
    <string name="printer_bluetooth_describe_off">打开蓝牙以搜索附件的蓝牙打印机</string>
    <string name="title_paired_devices">已配对</string>
    <string name="title_other_devices">New</string>
    <string name="scan">扫描</string>
    <string name="bluetooth_device_list">蓝牙设备列表</string>
    <string name="select_bluetooth_device">选择蓝牙设备</string>
    <string name="none_bluetooth_device_found">没有找到蓝牙设备</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="scaning">扫描中...</string>
    <string name="usb_devices_list">USB设备列表</string>
    <string name="none_usb_device">没有USB设备</string>
    <string name="printer_set">打印机设置</string>
    <string-array name="baudrate">
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>115200</item>
    </string-array>
    <string name="str_no_serialport">该设备不支持串口</string>
    <string name="str_conn_state_disconnect">连接状态：未连接</string>
    <string name="str_conn_state_connecting">连接状态：连接中</string>
    <string name="str_connecting">连接中</string>
    <string name="str_conn_state_connected">连接状态：已连接</string>
    <string name="str_wifi_ip">请输入IP：</string>
    <string name="str_ip">IP: </string>
    <string name="str_port">Port: </string>
    <string name="str_wifi_port">请输入端口号：</string>
    <string name="str_state_query">状态查询</string>
    <string name="str_mode_change">更换打印模式</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_label_print">标签打印</string>
    <string name="matrix">标签打印矩阵二维码</string>
    <string name="matrix_tip">支持机型（M320）</string>
    <string name="str_label_print_long_photo">标签打印长图</string>
    <string name="str_photo_description">部分机器不支持该指令，会打印空白</string>
    <string name="str_receipt_print">票据打印</string>
    <string name="str_cpcl_print">面单打印</string>
    <string name="str_bluetooth_connect">蓝牙连接</string>
    <string name="str_usb_connect">USB连接</string>
    <string name="str_wifi_connect">wifi连接</string>
    <string name="str_serialport_connect">串口连接</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_cann_printer">请先连接打印机</string>
    <string name="str_bluetooth">蓝牙</string>
    <string name="str_serialport">串口</string>
    <string name="str_usb">USB</string>
    <string name="str_wifi">WIFI</string>
    <string name="str_conn_successful">连接成功！</string>
    <string name="str_conn_fail">连接失败！</string>
    <string name="str_baudrate">波特率：</string>
    <string name="str_serialport_path">串口路径：</string>
    <string name="str_conn_devices">多设备</string>
    <string name="str_conn_receipt_and_label_continuity_print">连续打印</string>
    <string name="str_address">地址：</string>
    <string name="gprinter001">Printer 001</string>
    <string name="gprinter002">Printer 002</string>
    <string name="gprinter003">Printer 003</string>
    <string name="gprinter004">Printer 004</string>
    <string name="disconnect">断开连接</string>
    <string name="cutting">断开连接中...</string>
    <string name="str_disconn">断开</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="connecting">连接中...</string>
    <string name="port">接口:未设定 </string>
    <string name="init_port_info">地址:不详</string>
    <string name="str_enter_print_counts">请输入打印次数：</string>
    <string name="str_choice_printer_command">请选择正确的打印机指令</string>
    <string name="str_printer_conn_normal">打印机连接正常</string>
    <string name="str_printer_out_of_paper">打印机缺纸</string>
    <string name="str_printer_open_cover">打印机开盖</string>
    <string name="str_printer_error">打印机出错</string>
    <string name="str_state">状态：</string>
    <string name="str_interface_undefine">接口：未设定</string>
    <string name="str_select_printer_id">选中id为{0}的打印机</string>
    <string name="bluetooth_is_not_enabled">蓝牙没有开启</string>
    <string name="print_previous">打印上一张小票</string>
    <string name="notScan">未扫</string>
    <string name="scanned1">已扫</string>
</resources>