<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/receiptTimeText"
        style="@style/TextViewStyle"
        android:layout_marginTop="10dp"
        android:text="@string/receipt_time"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/receiptTime"
        style="@style/TextViewStyle"
        android:background="@drawable/shape_rectangle_black"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/choice_date"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiptTimeText" />

    <Button
        android:id="@+id/printPrevious"
        style="@style/TextViewStyle"
        android:layout_marginTop="10dp"
        android:text="@string/print_previous"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/ic_sr_blue"
        app:layout_constraintHeight_percent="@dimen/layout_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiptTime" />

    <Button
        android:id="@+id/clear"
        style="@style/TextViewStyle"
        android:background="@drawable/shape_rectangle_grey"
        android:gravity="center"
        android:text="@string/reset"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/yes"
        style="@style/TextViewStyle"
        android:background="@drawable/shape_rectangle_blue"
        android:gravity="center"
        android:text="@string/yes"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="@dimen/view_height_percent"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>