<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/date_picker_text_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/date_picker_text_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/confirm"
        android:textColor="@color/date_picker_text_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_layer_nesting_margin"
        android:background="@color/date_picker_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <com.shebangs.warehouse.component.datetimepicker.PickerView
        android:id="@+id/dpv_year"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.18" />

    <TextView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/year"
        android:textColor="@color/date_picker_text_dark"
        android:textSize="@dimen/date_unit_text_size"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/dpv_year"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <com.shebangs.warehouse.component.datetimepicker.PickerView
        android:id="@+id/dpv_month"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <TextView
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/month"
        android:textColor="@color/date_picker_text_dark"
        android:textSize="@dimen/date_unit_text_size"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/dpv_month"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <com.shebangs.warehouse.component.datetimepicker.PickerView
        android:id="@+id/dpv_day"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <TextView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="@color/date_picker_text_dark"
        android:textSize="@dimen/date_unit_text_size"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/dpv_day"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <com.shebangs.warehouse.component.datetimepicker.PickerView
        android:id="@+id/dpv_hour"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <TextView
        android:id="@+id/tv_hour_unit"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/hour"
        android:textColor="@color/date_picker_text_dark"
        android:textSize="@dimen/date_unit_text_size"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/dpv_hour"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <com.shebangs.warehouse.component.datetimepicker.PickerView
        android:id="@+id/dpv_minute"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/tv_hour_unit"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />

    <TextView
        android:id="@+id/tv_minute_unit"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/minute"
        android:textColor="@color/date_picker_text_dark"
        android:textSize="@dimen/date_unit_text_size"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toEndOf="@+id/dpv_minute"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.09" />
</androidx.constraintlayout.widget.ConstraintLayout>