<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printer_bluetooth_title"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/scanning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scaning" />
        </LinearLayout>

        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:text="@string/printer_bluetooth_describe_on" />
    </LinearLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_weight="0.2" />
</LinearLayout>